[gd_scene load_steps=4 format=3 uid="uid://bpeeqsevhjqme"]

[ext_resource type="Script" path="res://src/ui/MainMenu.gd" id="1_ctg1o"]
[ext_resource type="Texture2D" uid="uid://cdxs5ji8644oe" path="res://assets/logo/battealogo.png" id="2_1kwud"]

[sub_resource type="LabelSettings" id="LabelSettings_mdl2c"]
font_size = 24

[node name="MainMenu" type="Node2D"]
position = Vector2(683, 384)
script = ExtResource("1_ctg1o")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 1)
metadata/_edit_use_anchors_ = true

[node name="TitleName" type="Label" parent="HUD/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.5
offset_top = -172.0
offset_right = 209.5
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
text = "Automaton Annihilation"
label_settings = SubResource("LabelSettings_mdl2c")
horizontal_alignment = 1
vertical_alignment = 1
language = "en"
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="HUD/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="HUD/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="HUD/ColorRect"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_1kwud")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
